lint and prettier

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +13,7 @@
         <img src="https://raw.githubusercontent.com/JacintoDesign/mirage/master/mirage-logo.png" alt="Mirage Logo" />
         <button id="pipButtonElement" class="button">MIRAGE</button>
     </div>
+    <!-- Script -->
     <script src="script.js"></script>
 </body>
 </html>
