revised project styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture in Picture</title>
-    <link rel='shortcut icon' type='image/x-icon' href='https://raw.githubusercontent.com/JacintoDesign/mirage/master/favicon.ico' />
+    <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <video id="videoElement" controls height="360" width="640" style="display: none;"></video>
-        <img src="https://raw.githubusercontent.com/JacintoDesign/mirage/master/mirage-logo.png" alt="Mirage Logo" />
-        <button id="pipButtonElement" class="button">MIRAGE</button>
+        <div class="button-container">
+            <button id="pipButtonElement">START</button>
+        </div>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
