--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="wrapper">
-        <video id="videoElement" controls height="360" width="640" style="display: none;"></video>
+        <video id="videoElement" controls height="360" width="640" style="display: none"></video>
         <div class="button-container">
-            <button id="pipButtonElement">START</button>
+            <button id="pipButton">START</button>
         </div>
     </div>
     <!-- Script -->
