final production code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Wrapper -->
     <div class="wrapper">
-        <video id="videoElement" controls height="360" width="640" style="display: none"></video>
+        <!-- Video -->
+        <video id="videoElement" controls height="360" width="640" hidden></video>
+        <!-- Button -->
         <div class="button-container">
             <button id="pipButton">START</button>
         </div>
