final production code

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Wrapper -->
-    <div class="wrapper">
-        <!-- Video -->
-        <video id="videoElement" controls height="360" width="640" hidden></video>
-        <!-- Button -->
-        <div class="button-container">
-            <button id="pipButton">START</button>
-        </div>
+    <!-- Video -->
+    <video id="video" controls height="360" width="640" hidden></video>
+    <!-- Button -->
+    <div class="button-container">
+        <button id="button">START</button>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
