--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture in Picture</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=jacinto.design">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Video -->
-    <video id="video" controls height="360" width="640" hidden></video>
+    <video id="video" controls height='360' width='640'hidden></video>
     <!-- Button -->
     <div class="button-container">
         <button id="button">START</button>
@@ -18,3 +18,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
